--- a/json11/Makefile
+++ b/json11/Makefile
@@ -1,14 +1,15 @@
-.PHONY: clean
-
 CXX = clang++
-CXXFLAGS = -fPIC -Wall -std=c++11
+CXXFLAGS = -fPIC -Wall -std=c++11 -O3
 TARGET = libjson11.so
 OBJECTS = json11.o
+
+.PHONY: clean
 
 all: $(TARGET)
 
 $(TARGET): $(OBJECTS)
 	clang++ -shared -o $(TARGET) $(OBJECTS)
+	strip $(TARGET)
 
 %.cpp: %.o
 
